@@ -2,8 +2,9 @@
 	- ub_ctx_set_tls call for libunbound that enables DoT for the machines
 	  set with ub_ctx_set_fwd.  Patch from Florian Obser.
 	- Set build system for added call in the libunbound API.
-	- List d.root-servers.net as a host that allows AXFR in example.conf
-	  config file, as suggested from draft-ietf-dnsop-7706-bis-02.
+	- List example config for root zone copy locally hosted with auth-zone
+	  as suggested from draft-ietf-dnsop-7706-bis-02.  But with updated
+	  B root address.
 
 25 January 2019: Wouter
 	- Fix that tcp for auth zone and outgoing does not remove and
